# algorithm_projects

0_0_Bagpack/: 0_0_Bagpack.sln
0_0_Bagpack/0_0_Bagpack/: 0_0_Bagpack.cpp  0_0_Bagpack.vcxproj  0_0_Bagpack.vcxproj.filters
0_0_BinSearch/: CMakeLists.txt
0_0_BinSearch/0_0_BinSearch/: 0_0_BinSearch.cpp  0_0_BinSearch.h  (+1 more)
0_10_Dijkstra/: 0_10_Dijkstra.sln
0_1_BuildCorrespondenceMatrix/: 0_1_BuildCorrespondenceMatrix.sln
0_1_Build_tree/: 0_1_Build_tree.sln
0_1_matrix/: 0_1_matrix.sln
0_2_CanonicalMatrix/: 0_2_CanonicalMatrix.sln
0_2_Is_heap/: 0_2_Is_heap.sln
0_2_OneP1/: 0_2_OneP1.sln
0_2_Remove_from_treee/: 0_2_Remove_from_treee.sln
0_3_Bin_Heap/: 0_3_Bin_Heap.sln
0_3_BuildAdjacencyList/: 0_3_BuildAdjacencyList.sln
0_3_Is_BST/: 0_3_Is_BST.sln
0_4_CanonicalMatrixByCorrespondenceMatrix/: 0_4_CanonicalMatrixByCorrespondenceMatrix.sln
0_4_SumTask/: 0_4_SumTask.sln
0_5_Destroy_Road/: 0_5_Destroy_Road.sln
0_6_HashTable/: 0_6_HashTable.sln
0_7_Build_Road/: 0_7_Build_Road.sln
0_8_bfs/: 0_8_bfs.sln
0_9_dfs/: 0_9_dfs.sln
18_Hackers/: 18_Hackers.sln
20_1_palindr/: 20_1_palindr.sln
39_1_phone_numbers/: 39_1_phone_numbers.sln
42_Competitions/: 42_Competitions.sln
43_2_2_haffman/: 43_2_2_haffman.sln
43_2_haffman/: 43_2_haffman.sln
69_2_WayOfJaba/: CMakeLists.txt
69_2_WayOfJaba/69_2_WayOfJaba/: 69_2_WayOfJaba.cpp  69_2_WayOfJaba.h  CMakeLists.txt
6_lis/: 6_lis.sln
93_lcs/: 93_lcs.sln
ConsoleApplication1/: ConsoleApplication1.sln
Problem12/: Problem12.sln
X_GetMinAtDistance/: X_GetMinAtDistance.sln
matr/: matr.sln
(+202 files in other folders)
